compiler/tests/en/errors/circ_b.salam
// EXPECT: E008
package circb

import "circ_a.salam"

func B() i32: ret 2 end
